# flavortime

./: .gitignore  Cargo.toml  README.md  config.toml  deploygh.sh  tauri.conf.json
.github/workflows/: build.yml  release.yml
capabilities/: default.json
icons/: icon.icns
scripts/: regenerate_icons.sh
src/: lib.rs  tray.rs
src/app/: commands.rs  state.rs
src/data/: config.rs  locale.rs  mod.rs  runtime.rs
src/services/: discord.rs  flavortown.rs  hackatime.rs  mod.rs  pyramid.rs
web/: app.js  i18n.js  index.html  styles.css
web/locales/: en.json
