[package]
name = "app"
version = "1.0.3"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["image-png", "tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
discord-presence = "2.1.1"
reqwest = { version = "0.13.1", features = ["form", "json", "rustls-native-certs"] }
dirs = "6.0.0"
urlencoding = "2.1.3"
webbrowser = "1.0.6"
tauri-plugin-autostart = "2.5.1"
chrono = "0.4"
toml = "0.8"
tokio = { version = "1", features = ["time"] }
